--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
 }
     </style>
   </head>
-  <body onload="initialize()">
+  <body>
    <!--navigation-->
     <div class="pos-f-t">
       <div class="collapse" id="navbarToggleExternalContent">
@@ -138,7 +138,7 @@
                </div>
            </div><!--/row-->
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <form>
                       <div class="form-group">
                         <input type="text" class="form-control" id="inputName" placeholder="Your Name" required>
@@ -152,7 +152,7 @@
                       <button type="submit" class="btn btn-primary float-right"><i class="fa fa-paper-plane" aria-hidden="true"></i> Send</button>
                     </form>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <div class="location img-thumbnail">
                         <div id="map"></div>
                     </div>
